--- a/main.ipynb
+++ b/main.ipynb
@@ -100,6 +100,155 @@
     "# count of null values column wise\n",
     "df.isnull().sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "\n",
+    "\n",
+    "# ------------------- 1. Data Preprocessing -------------------\n",
+    "\n",
+    "# Remove currency symbols from price columns and convert to numeric\n",
+    "df['Open'] = df['Open'].astype(float)\n",
+    "df['High'] = df['High'].astype(float)\n",
+    "df['Low'] = df['Low'].astype(float)\n",
+    "df['Close'] = df['Close'].astype(float)\n",
+    "df['Volume'] = df['Volume'].astype(int)\n",
+    "\n",
+    "# Convert 'Date' to datetime\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "\n",
+    "# Handle missing values by filling them with the mean of each column\n",
+    "df.fillna(df.mean(), inplace=True)\n",
+    "\n",
+    "# ------------------- Feature Engineering -------------------\n",
+    "\n",
+    "# Create daily volatility feature\n",
+    "df['Volatility'] = df['High'] - df['Low']\n",
+    "\n",
+    "# Create moving averages\n",
+    "df['MA7'] = df['Close'].rolling(window=7).mean()\n",
+    "df['MA14'] = df['Close'].rolling(window=14).mean()\n",
+    "df['MA50'] = df['Close'].rolling(window=50).mean()\n",
+    "\n",
+    "# Create lag features for closing prices\n",
+    "df['Lag1'] = df['Close'].shift(1)\n",
+    "df['Lag2'] = df['Close'].shift(2)\n",
+    "\n",
+    "# Drop rows with NaN values due to moving averages or lag features\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "# Scale the 'Volume' column using StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "df['Volume_Scaled'] = scaler.fit_transform(df[['Volume']])\n",
+    "\n",
+    "# ------------------- 2. Exploratory Data Analysis (EDA) -------------------\n",
+    "\n",
+    "# Plot historical closing prices\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(df['Date'], df['Close'], label='Closing Price')\n",
+    "plt.title('Historical Closing Prices')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Price')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Correlation Matrix\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.heatmap(df[['High', 'Low', 'Volume', 'Close', 'Volatility', 'MA7', 'MA14', 'MA50']].corr(), annot=True, cmap='coolwarm')\n",
+    "plt.title('Correlation Matrix')\n",
+    "plt.show()\n",
+    "\n",
+    "# ------------------- 3. Modeling -------------------\n",
+    "\n",
+    "# Define features (X) and target (y)\n",
+    "features = ['High', 'Low', 'Volume_Scaled', 'Volatility', 'MA7', 'MA14', 'MA50', 'Lag1', 'Lag2']\n",
+    "X = df[features]\n",
+    "y = df['Close']\n",
+    "\n",
+    "# Split the dataset into training (80%) and testing (20%) sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# XGBoost Regressor\n",
+    "xgb = XGBRegressor(random_state=42)\n",
+    "xgb.fit(X_train, y_train)\n",
+    "y_pred_xgb = xgb.predict(X_test)\n",
+    "\n",
+    "# ------------------- 4. Forecasting Future Data (for 2025) -------------------\n",
+    "\n",
+    "def forecast_prices_for_2025(model, df, days_ahead=365):\n",
+    "    # Get the last available date and extend it into the future\n",
+    "    last_date = df['Date'].max()\n",
+    "    future_dates = pd.date_range(last_date, periods=days_ahead + 1, freq='B')[1:]  # Business days only\n",
+    "    \n",
+    "    # Use the last known data as the starting point for the forecast\n",
+    "    last_row = df.iloc[-1].copy()\n",
+    "\n",
+    "    forecasted_data = []\n",
+    "    \n",
+    "    for future_date in future_dates:\n",
+    "        # Use the last row to create new feature values for the prediction\n",
+    "        new_row = last_row.copy()\n",
+    "        new_row['Date'] = future_date\n",
+    "\n",
+    "        # Create new features like Volatility, moving averages, and lags for future dates\n",
+    "        new_row['Volatility'] = new_row['High'] - new_row['Low']\n",
+    "\n",
+    "        # Update moving averages with rolling values\n",
+    "        new_row['MA7'] = df['Close'].rolling(window=7).mean().iloc[-1]\n",
+    "        new_row['MA14'] = df['Close'].rolling(window=14).mean().iloc[-1]\n",
+    "        new_row['MA50'] = df['Close'].rolling(window=50).mean().iloc[-1]\n",
+    "\n",
+    "        # Lag features (e.g., Lag1, Lag2)\n",
+    "        new_row['Lag1'] = last_row['Close']\n",
+    "        new_row['Lag2'] = last_row['Lag1']\n",
+    "\n",
+    "        # Append new row for forecast\n",
+    "        forecasted_data.append(new_row)\n",
+    "\n",
+    "        # Predict the next day's price using the model\n",
+    "        X_new = pd.DataFrame([new_row[features]])\n",
+    "        predicted_close = model.predict(X_new)[0]\n",
+    "\n",
+    "        # Update last row to simulate moving forward in time\n",
+    "        last_row['Close'] = predicted_close\n",
+    "        last_row['Lag1'] = new_row['Close']\n",
+    "        last_row['Lag2'] = new_row['Lag1']\n",
+    "        last_row['High'] = predicted_close  # Assuming the high is related to the close for the next step\n",
+    "        last_row['Low'] = predicted_close  # Similarly for low\n",
+    "    \n",
+    "    # Convert the forecasted data into a DataFrame\n",
+    "    forecast_df = pd.DataFrame(forecasted_data)\n",
+    "    \n",
+    "    return forecast_df\n",
+    "\n",
+    "# Example: Predict for 2025 using the XGBoost model\n",
+    "forecast_df = forecast_prices_for_2025(xgb, df, days_ahead=365)\n",
+    "\n",
+    "# Plot the historical vs forecasted closing prices\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(df['Date'], df['Close'], label='Historical Prices')\n",
+    "plt.plot(forecast_df['Date'], forecast_df['Close'], label='Forecasted Prices for 2025', color='r')\n",
+    "plt.title('Historical vs Forecasted Tesla Closing Prices for 2025')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Price')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Show the forecasted prices for 2025\n",
+    "print(forecast_df[['Date', 'Close']])\n"
+   ]
   }
  ],
  "metadata": {
