--- a/main.ipynb
+++ b/main.ipynb
@@ -111,7 +111,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
     "from xgboost import XGBRegressor\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
@@ -164,12 +163,6 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "# Correlation Matrix\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.heatmap(df[['High', 'Low', 'Volume', 'Close', 'Volatility', 'MA7', 'MA14', 'MA50']].corr(), annot=True, cmap='coolwarm')\n",
-    "plt.title('Correlation Matrix')\n",
-    "plt.show()\n",
-    "\n",
     "# ------------------- 3. Modeling -------------------\n",
     "\n",
     "# Define features (X) and target (y)\n",
@@ -198,35 +191,34 @@
     "    forecasted_data = []\n",
     "    \n",
     "    for future_date in future_dates:\n",
-    "        # Use the last row to create new feature values for the prediction\n",
+    "        # Create new row and future features based on previous predictions\n",
     "        new_row = last_row.copy()\n",
     "        new_row['Date'] = future_date\n",
     "\n",
-    "        # Create new features like Volatility, moving averages, and lags for future dates\n",
-    "        new_row['Volatility'] = new_row['High'] - new_row['Low']\n",
-    "\n",
-    "        # Update moving averages with rolling values\n",
-    "        new_row['MA7'] = df['Close'].rolling(window=7).mean().iloc[-1]\n",
-    "        new_row['MA14'] = df['Close'].rolling(window=14).mean().iloc[-1]\n",
-    "        new_row['MA50'] = df['Close'].rolling(window=50).mean().iloc[-1]\n",
+    "        # Update moving averages dynamically using forecasted data\n",
+    "        last_close_values = [last_row['Lag1'], last_row['Close']]\n",
+    "        new_row['MA7'] = np.mean(last_close_values[-7:]) if len(last_close_values) >= 7 else np.mean(last_close_values)\n",
+    "        new_row['MA14'] = np.mean(last_close_values[-14:]) if len(last_close_values) >= 14 else np.mean(last_close_values)\n",
+    "        new_row['MA50'] = np.mean(last_close_values[-50:]) if len(last_close_values) >= 50 else np.mean(last_close_values)\n",
     "\n",
     "        # Lag features (e.g., Lag1, Lag2)\n",
     "        new_row['Lag1'] = last_row['Close']\n",
     "        new_row['Lag2'] = last_row['Lag1']\n",
     "\n",
-    "        # Append new row for forecast\n",
-    "        forecasted_data.append(new_row)\n",
-    "\n",
     "        # Predict the next day's price using the model\n",
     "        X_new = pd.DataFrame([new_row[features]])\n",
     "        predicted_close = model.predict(X_new)[0]\n",
+    "\n",
+    "        # Append new row for forecast\n",
+    "        new_row['Close'] = predicted_close\n",
+    "        forecasted_data.append(new_row)\n",
     "\n",
     "        # Update last row to simulate moving forward in time\n",
     "        last_row['Close'] = predicted_close\n",
     "        last_row['Lag1'] = new_row['Close']\n",
     "        last_row['Lag2'] = new_row['Lag1']\n",
-    "        last_row['High'] = predicted_close  # Assuming the high is related to the close for the next step\n",
-    "        last_row['Low'] = predicted_close  # Similarly for low\n",
+    "        last_row['High'] = predicted_close * (1 + np.random.normal(0, 0.01))  # Add slight randomness to High\n",
+    "        last_row['Low'] = predicted_close * (1 - np.random.normal(0, 0.01))  # Add slight randomness to Low\n",
     "    \n",
     "    # Convert the forecasted data into a DataFrame\n",
     "    forecast_df = pd.DataFrame(forecasted_data)\n",
@@ -241,6 +233,22 @@
     "plt.plot(df['Date'], df['Close'], label='Historical Prices')\n",
     "plt.plot(forecast_df['Date'], forecast_df['Close'], label='Forecasted Prices for 2025', color='r')\n",
     "plt.title('Historical vs Forecasted Tesla Closing Prices for 2025')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Price')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# ------------------- Plot for Years 2023, 2024, and 2025 -------------------\n",
+    "\n",
+    "# Filter the data for years 2023, 2024, and 2025\n",
+    "df_filtered = df[df['Date'].dt.year >= 2023]\n",
+    "forecast_df_filtered = forecast_df[forecast_df['Date'].dt.year >= 2023]\n",
+    "\n",
+    "# Plot the historical vs forecasted closing prices for 2023, 2024, and 2025\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(df_filtered['Date'], df_filtered['Close'], label='Historical Prices (2023, 2024)', color='b')\n",
+    "plt.plot(forecast_df_filtered['Date'], forecast_df_filtered['Close'], label='Forecasted Prices (2025)', color='r')\n",
+    "plt.title('Historical vs Forecasted Tesla Closing Prices (2023-2025)')\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Price')\n",
     "plt.legend()\n",
