did it just get hot in here #heatmap

--- a/main.ipynb
+++ b/main.ipynb
@@ -107,9 +107,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install mplfinance\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import mplfinance as mpf\n",
     "from sklearn.model_selection import train_test_split\n",
     "from xgboost import XGBRegressor\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -161,6 +165,26 @@
     "plt.xlabel('Date')\n",
     "plt.ylabel('Price')\n",
     "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# ------------------- Candlestick Chart -------------------\n",
+    "\n",
+    "# Prepare data for candlestick chart\n",
+    "df_candlestick = df[['Date', 'Open', 'High', 'Low', 'Close', 'Volume']]\n",
+    "df_candlestick.set_index('Date', inplace=True)\n",
+    "\n",
+    "# Plot candlestick chart using mplfinance\n",
+    "mpf.plot(df_candlestick, type='candle', volume=True, style='charles', title='Candlestick Chart', ylabel='Price', ylabel_lower='Volume')\n",
+    "\n",
+    "# ------------------- Heatmap of Correlations -------------------\n",
+    "\n",
+    "# Calculate correlation matrix\n",
+    "corr_matrix = df[['Open', 'High', 'Low', 'Close', 'Volume', 'Volatility', 'MA7', 'MA14', 'MA50']].corr()\n",
+    "\n",
+    "# Plot heatmap\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', linewidths=0.5)\n",
+    "plt.title('Correlation Heatmap')\n",
     "plt.show()\n",
     "\n",
     "# ------------------- 3. Modeling -------------------\n",
